[package]
name = "carbleurator"
description = "An application to control a BLE-enabled RC car with a USB gamepad"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>", "Karen Page <karennicepage@gmail.com>"]
edition = "2018"
homepage = "https://github.com/compenguy/carbleurator"
repository = "https://github.com/compenguy/carbleurator.git"
license = "MIT"

[features]
rpi = []
default = []

[dependencies]
log = "0.4"
env_logger = "0.9"
async-std = { version = "1", features = ["attributes", "unstable"] }
anyhow = "1.0"
thiserror = "1.0"
gilrs = "0.9"
btleplug = "0.9"
# btleplug 0.4 uses failure 0.1.8 and we need a trait from it to make the errors
# compatible with anyhow
#failure = "0.1.8"
