[package]
name = "carbleurator"
description = "An application to control a BLE-enabled RC car with a USB gamepad"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>", "Karen Page <karennicepage@gmail.com>"]
edition = "2018"
homepage = "https://github.com/compenguy/carbleurator"
repository = "https://github.com/compenguy/carbleurator.git"
license = "MIT"

[features]
rpi = []
default = []

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "time", "rt", "macros"] }
anyhow = "1"
thiserror = "1"
gilrs = "0.10"
btleplug = "0.11"
uuid = "1"
